--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vite": "^5.1.4"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.24.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.2"
