--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Milad4M",
   "license": "ISC",
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.20.1",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
