--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "vite": "^5.1.4"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.1",
     "@reduxjs/toolkit": "^2.2.1",
     "@tanstack/react-query": "^5.24.1",
     "@tanstack/react-query-devtools": "^5.24.1",
